CVS HEAD:
 * user interface improvements:
   * starting position in editor now starts at player 1 (#10625)
   * fixed female units not appearing in help (broken since 0.9.0)
   * reduced required width of weapon area in help
   * better diagnostics on parsing: line numbers
 * campaign improvements:
   * fix Dacyn not being [recall]-ed in Unexpected Appearance (Eastern Invasion) (#10619)
   * new map and scenario modification for Drowned Plains (Eastern Invasion)
   * fix thieves not appearing in Siege of Elensefar (Heir to the Throne) (forum thread 5719)
   * shamans are no longer recallable in Son of the Black Eye (#11932)
   * killing enemy leader in Siege of Barag Gor (Son of the Black Eye) is no longer a win
 * multiplayer improvements:
   * next_scenario: tentative start of MP campaign support
 * unit graphics and sound improvements 
   * new death animations for: Ancient Lich, Ancient Wose, Arch Mage,
     Assassin, Bandit, Battle Princess, Blood Bat, Bone Shooter, Bowman,
     Cavalier, Cavalryman, Cave Spider, Chocobone, Cockatrice,
     Commander, Cuttle Fish, Dark Adept, Dark Queen, Dark Spirit,
     Deathblade, Death Knight, Deathmaster, Demilich, Direwolf_Rider, 
     Dragoon, Duelist, Draug, Drake_Burner, Drake_Clasher, Drake Fighter,
     Drake Fire
   * new attack animations for Halberdier
   * fixed several image files being referred to by wrong name
 * language and i18n:
   * language fixes and polishing (English)
   * updated translations:
     * Afrikaans
     * Hungarian
     * Slovenian
     * Turkish
 * slow now affects units with 2 or more attacks (not just 1 remaining)
 * slow now works with berserk and is cumulative within berserk rounds
 * various bug fixes and code cleanups

Version 0.9.1:
 * user interface improvements:
   * added a shortcut for making screenshots
   * added support for Home/End in menus, ctrl-a/e/u in textboxes
   * fixed the formatting of wrapped text lines being lost