@@ -3,7 +3,8 @@ CVS HEAD:
    * starting position in editor now starts at player 1 (#10625)
    * fixed female units not appearing in help (broken since 0.9.0)
    * reduced required width of weapon area in help
-   * better diagnostics on parsing: line numbers
+   * better diagnostics on parsing: file inclusion sequence
+   * fixed items appearing in traits description (#12603)
  * campaign improvements:
    * fix Dacyn not being [recall]-ed in Unexpected Appearance (Eastern Invasion) (#10619)
    * new map and scenario modification for Drowned Plains (Eastern Invasion)
